Fix text not visible in form inputs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,7 +237,7 @@ form {
 
 .text-input {
     background: rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
+    color: rgb(20, 20, 20);
     width: 100%;
     height: 25px;
     margin: 10px 0;
